# FreecamMod

./: CMakeLists.txt  manifest.json
.github/workflows/: build.yml
include/: FreecamMod.h
src/: FreecamMod.cpp
